# roo

./: .gitignore  .gitmodules  .roomodules  README.md  pyproject.toml
src/roo/: __init__.py  __main__.py  cli.py  external_services.py  models.py  services.py
src/roo/utils/: git.py  os.py
tests/: conftest.py  test_cli.py  test_external_services.py  test_os_utils.py  test_services.py
